--- a/site.css
+++ b/site.css
@@ -1385,7 +1385,7 @@ footer {
             font-family: Georgia, Times, Times New Roman, serif; 
             font-style: italic;
             font-size: 1.375rem;
-            color: $secondary_text;
+            color: $primary;
             text-align: center;
         }
     }
