Redlands Village 1.0  /site.css

--- a/site.css
+++ b/site.css
@@ -424,6 +424,7 @@ strong {
     }
     .social_icon:hover {
         div {
+            border: 1px solid $primary;
             background: $secondary_text;    
         }
         .fab {
