--- a/site.css
+++ b/site.css
@@ -48,7 +48,7 @@
 $primary: #cc5038;
 $primaryRGB: rgb(183, 2, 0);
 $secondary: #8f7032;
-$accent: #fb8169;
+$accent: #B34630;
 $text: #000;
 $secondary_text: #fff;
 
