Redlands Village 1.0  /site.css

--- a/site.css
+++ b/site.css
@@ -45,7 +45,7 @@
 }
 
 /* *** COLOURS *** */
-$primary: #cc5038;
+$primary: #46601f;
 $primaryRGB: rgb(183, 2, 0);
 $secondary: #8f7032;
 $accent: #B34630;
