Redlands Village 1.0  /site.css

--- a/site.css
+++ b/site.css
@@ -45,10 +45,10 @@
 }
 
 /* *** COLOURS *** */
-$primary: #46601f;
+$primary: #92402f;
 $primaryRGB: rgb(183, 2, 0);
 $secondary: #8f7032;
-$accent: #B34630;
+$accent: #783426;
 $text: #000;
 $secondary_text: #fff;
 
