--- a/site.css
+++ b/site.css
@@ -45,10 +45,10 @@
 }
 
 /* *** COLOURS *** */
-$primary: #92402f;
+$primary: #963d2b;
 $primaryRGB: rgb(183, 2, 0);
 $secondary: #8f7032;
-$accent: #783426;
+$accent: #862117;
 $text: #000;
 $secondary_text: #fff;
 
