Redlands Village 1.0  /site.css

--- a/site.css
+++ b/site.css
@@ -1380,6 +1380,7 @@ footer {
     }
     img {
         padding: 10px;
+        max-height: 100%;
         position: absolute;
         top: 50%;
         left: 50%;
